--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:name="io.flutter.app.FlutterApplication"
@@ -48,7 +48,21 @@
             </intent-filter>
         </activity>
 
+        <meta-data
+            android:name="io.flutter.embedding.android.NormalTheme"
+            android:resource="@style/NormalTheme" />
+        <!-- Displays an Android View that continues showing the launch screen
+             Drawable until Flutter paints its first frame, then this splash
+             screen fades out. A splash screen is useful to avoid any visual
+             gap between the end of Android's launch screen and the painting of
+             Flutter's first frame. -->
+        <meta-data
+            android:name="io.flutter.embedding.android.SplashScreenDrawable"
+            android:resource="@drawable/launch_background" />
 
+        <meta-data
+            android:name="flutterEmbedding"
+            android:value="2" />
 
 
     </application>
